[package]
name = "kaiv"
version = "0.1.0"
edition = "2021"
description = "A Kv Format Swiss-Army knife CLI tool"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kvformat/kaiv-rs"
homepage = "https://kvformat.org/"
readme = "README.md"
keywords = ["kv", "kvformat", "cli", "env", "config"]
categories = ["command-line-utilities", "config"]

[dependencies]
clap = { version = "4", features = ["derive"] }
kvf = "0.1.0"
serde_json = "1"
