[package]
name = "kaiv"
version = "0.1.0"
edition = "2021"
authors = ["Bojan Đuričković"]
rust-version = "1.74"
description = "A Kv Format Swiss-Army knife CLI tool"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kvformat/kaiv-rs"
homepage = "https://kvformat.org/"
documentation = "https://docs.rs/kaiv"
readme = "README.md"
keywords = ["kv", "kvformat", "cli", "env", "config"]
categories = ["command-line-utilities", "config"]
exclude = [".github/", ".gitignore"]

[dependencies]
clap = { version = "4", features = ["derive"] }
kvf = "0.1.0"
serde_json = "1"
